Removed borders and resolved some wrapping issues

--- a/src/components/ResponsiveView/components/note.css
+++ b/src/components/ResponsiveView/components/note.css
@@ -9,7 +9,7 @@
 } */
 
 .note {
-  position: relative;
+  /* position: relative; */
   display: flex;
   flex-direction: column;
   width: 300px;
@@ -52,13 +52,16 @@
 /* EDITOR DISPLAY STYLES */
 .animated-editor-display {
   display: none;
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
   /* border: 1px solid orange; */
 }
 
+/** .animate-open */
 .animated-editor-display.animate-open {
+  position: relative;
   display: block;
+  width: 100%;
   height: 100%;
   /* border: 1px solid blue; */
 }
@@ -67,8 +70,8 @@
   position: absolute;
   display: flex;
   flex-direction: column;
-  width: 98%;
-  height: 98%;
+  width: 100%;
+  height: 100%;
   z-index: 1;
   transition: width .5s, height .5s;
   background-color: white;
