--- a/src/components/ResponsiveView/responsive-view.css
+++ b/src/components/ResponsiveView/responsive-view.css
@@ -1,6 +1,6 @@
 .responsive-view-container {
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .responsive-view {
